--- a/compiler/src/parsing/dune
+++ b/compiler/src/parsing/dune
@@ -1,5 +1,3 @@
-(ocamllex lexer)
-
 (menhir
  (modules parser)
  (flags --explain --unused-tokens --strict))
@@ -37,7 +35,7 @@
  (name grain_parsing)
  (public_name grain_parsing)
  (synopsis "Frontend modules for Grain compiler")
- (libraries menhirLib compiler-libs.common grain_utils utf8.lib str
+ (libraries menhirLib sedlex compiler-libs.common grain_utils utf8.lib str
    ppx_deriving_yojson.runtime ppx_sexp_conv.runtime-lib sexplib yojson)
  (preprocess
-  (pps ppx_sexp_conv ppx_deriving_yojson)))
+  (pps ppx_sexp_conv ppx_deriving_yojson sedlex.ppx)))
