--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,7 +1,9 @@
 name: Publish Docker images
 on:
   push:
-    branches: main
+    branches:
+      - main
+      - oscar/docker-arm64
   workflow_dispatch:
     inputs:
       tag:
@@ -20,6 +22,12 @@ jobs:
         id: vars
         if: ${{ github.event.inputs.tag }}
         run: GITHUB_TAG=${{ github.event.inputs.tag }}; echo ::set-output name=tag::${GITHUB_TAG#grain-}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2.0.0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2.0.0
 
       - name: Docker meta
         id: meta
@@ -51,7 +59,8 @@ jobs:
         with:
           context: .
           file: Dockerfile
-          push: true
+          push: false
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
@@ -67,6 +76,12 @@ jobs:
         id: vars
         if: ${{ github.event.inputs.tag }}
         run: GITHUB_TAG=${{ github.event.inputs.tag }}; echo ::set-output name=tag::${GITHUB_TAG#grain-}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2.0.0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2.0.0
 
       - name: Docker meta
         id: meta
@@ -100,6 +115,7 @@ jobs:
         with:
           context: .
           file: Dockerfile-slim
-          push: true
+          push: false
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
